crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mod.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "por",
          "swe"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Karin",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Peter",
            "role": "Father",
            "speaker_code": "DAD"
          },
          {
            "name": "Madalena",
            "role": "Mother",
            "speaker_code": "MUM"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;09.",
        "corpus": "mcf",
        "language": "por, swe",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "mcf",
        "language": "por, swe",
        "role": "Father",
        "speaker": "DAD",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "mcf",
        "language": "por, swe",
        "role": "Mother",
        "speaker": "MUM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "transcriber": "MCF",
        "type": "transcriber"
      },
      "line_type": "header"
    },
    {
      "header": {
        "transcriber": "MCF",
        "type": "transcriber"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "01-MAY-1987",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "location": "Video 1 sd.",
        "type": "tape_location"
      },
      "line_type": "header"
    },
    {
      "header": {
        "location": "Viken, Sweden.",
        "type": "location"
      },
      "line_type": "header"
    },
    {
      "header": {
        "text": "sitting at a table at home with Father, Karin in her high\n\tchair. Mother is videotaping.",
        "type": "situation"
      },
      "line_type": "header"
    },
    {
      "header": {
        "activities": "playing with crayons and paper on the table.",
        "type": "activities"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": "nej, jag vill ha handen .",
          "type": "Gls"
        },
        {
          "data": "no, I want the hand .",
          "type": "Eng"
        },
        {
          "data": {
            "content": "n̩ːːiwʊaˈhan̚",
            "label": "xpho"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": "neʝ vil hɑː ˈhandən",
            "label": "xmod"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "LL on syllabic nasal, HF on the next three sylls, MR on last word .",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Int"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "n",
                  "type": "text"
                },
                {
                  "content": "e",
                  "type": "shortening"
                },
                {
                  "content": "j",
                  "type": "text"
                }
              ],
              "raw_text": "n(e)j",
              "span": {
                "end": 510,
                "start": 505
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "v",
                  "type": "shortening"
                },
                {
                  "content": "ill",
                  "type": "text"
                }
              ],
              "raw_text": "(v)ill",
              "scoped_annotations": [
                {
                  "type": "scopeduncertain"
                }
              ],
              "span": {
                "end": 517,
                "start": 511
              },
              "type": "annotated_word"
            },
            {
              "content": [
                {
                  "content": "h",
                  "type": "shortening"
                },
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "(h)a",
              "span": {
                "end": 526,
                "start": 522
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "han",
                  "type": "text"
                },
                {
                  "content": "d",
                  "type": "shortening"
                }
              ],
              "raw_text": "han(d)",
              "span": {
                "end": 533,
                "start": 527
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;09.",
        "corpus": "mcf",
        "language": "por, swe",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Karin",
      "role": "Target_Child"
    },
    "DAD": {
      "birth_date": null,
      "code": "DAD",
      "id": {
        "corpus": "mcf",
        "language": "por, swe",
        "role": "Father",
        "speaker": "DAD"
      },
      "name": "Peter",
      "role": "Father"
    },
    "MUM": {
      "birth_date": null,
      "code": "MUM",
      "id": {
        "corpus": "mcf",
        "language": "por, swe",
        "role": "Mother",
        "speaker": "MUM"
      },
      "name": "Madalena",
      "role": "Mother"
    }
  }
}
