crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mor-ca.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Both terminators optional in CA",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "I",
                  "pos": "pron"
                },
                "post_clitics": [
                  {
                    "features": [
                      "Fin",
                      "Ind",
                      "Pres",
                      "S1"
                    ],
                    "lemma": "be",
                    "pos": "aux"
                  }
                ]
              },
              {
                "main": {
                  "features": [
                    "Ind"
                  ],
                  "lemma": "a",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "lemma": "play",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Plur"
                  ],
                  "lemma": "toy",
                  "pos": "noun"
                }
              }
            ],
            "terminator": null,
            "tier_type": "Mor"
          },
          "type": "Mor"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "I'm",
                  "type": "text"
                }
              ],
              "raw_text": "I'm",
              "span": {
                "end": 212,
                "start": 209
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 214,
                "start": 213
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "play",
                  "type": "text"
                }
              ],
              "raw_text": "play",
              "span": {
                "end": 219,
                "start": 215
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "toys",
                  "type": "text"
                }
              ],
              "raw_text": "toys",
              "span": {
                "end": 224,
                "start": 220
              },
              "type": "word"
            }
          ]
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
