crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mor-clitics.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Timmy",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Linda",
            "role": "Investigator",
            "speaker_code": "LIN"
          },
          {
            "name": "Winnie",
            "role": "Investigator",
            "speaker_code": "WIN"
          },
          {
            "name": "Gemma",
            "role": "Speaker",
            "speaker_code": "GEM"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "it",
                  "pos": "pron"
                },
                "post_clitics": [
                  {
                    "features": [
                      "Fin",
                      "Ind",
                      "Pres",
                      "S3"
                    ],
                    "lemma": "be",
                    "pos": "aux"
                  }
                ]
              },
              {
                "main": {
                  "features": [
                    "Prs",
                    "Acc",
                    "S1"
                  ],
                  "lemma": "I",
                  "pos": "pron"
                }
              }
            ],
            "terminator": "!",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "AUX"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "it's",
                  "type": "text"
                }
              ],
              "raw_text": "it's",
              "span": {
                "end": 303,
                "start": 299
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "me",
                  "type": "text"
                }
              ],
              "raw_text": "me",
              "span": {
                "end": 306,
                "start": 304
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Multiple post-clitics",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Prs",
                    "Nom",
                    "S2"
                  ],
                  "lemma": "you",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "lemma": "gonna",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S2"
                  ],
                  "lemma": "put",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Def",
                    "Art"
                  ],
                  "lemma": "the",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "lemma": "choochoo",
                  "pos": "noun"
                },
                "post_clitics": [
                  {
                    "features": [
                      "Fin",
                      "Ind",
                      "Pres",
                      "S3"
                    ],
                    "lemma": "be",
                    "pos": "aux"
                  }
                ]
              },
              {
                "main": {
                  "features": [
                    "Acc"
                  ],
                  "lemma": "wheel",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "lemma": "on",
                  "pos": "adp"
                }
              }
            ],
            "terminator": "?",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "ADVMOD"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 7,
                "index": 4,
                "relation": "DET"
              },
              {
                "head": 7,
                "index": 5,
                "relation": "COMPOUND"
              },
              {
                "head": 7,
                "index": 6,
                "relation": "COP"
              },
              {
                "head": 3,
                "index": 7,
                "relation": "OBJ"
              },
              {
                "head": 3,
                "index": 8,
                "relation": "ADVMOD"
              },
              {
                "head": 3,
                "index": 9,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "span": {
                "end": 450,
                "start": 447
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "gonna",
                  "type": "text"
                }
              ],
              "raw_text": "gonna",
              "span": {
                "end": 456,
                "start": 451
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "put",
                  "type": "text"
                }
              ],
              "raw_text": "put",
              "span": {
                "end": 460,
                "start": 457
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 464,
                "start": 461
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "choo",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 470,
                      "start": 469
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "choo's",
                  "type": "text"
                }
              ],
              "raw_text": "choo+choo's",
              "span": {
                "end": 476,
                "start": 465
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "wheel",
                  "type": "text"
                }
              ],
              "raw_text": "wheel",
              "span": {
                "end": 482,
                "start": 477
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "on",
                  "type": "text"
                }
              ],
              "raw_text": "on",
              "span": {
                "end": 485,
                "start": 483
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "this is not legal for mor",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Prs",
                    "Nom",
                    "S2"
                  ],
                  "lemma": "you",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "lemma": "gonna",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S2"
                  ],
                  "lemma": "put",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Def",
                    "Art"
                  ],
                  "lemma": "the",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "lemma": "chooscho",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Acc"
                  ],
                  "lemma": "wheel",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "lemma": "on",
                  "pos": "adp"
                }
              }
            ],
            "terminator": "?",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "ADVMOD"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 6,
                "index": 4,
                "relation": "DET"
              },
              {
                "head": 6,
                "index": 5,
                "relation": "COMPOUND"
              },
              {
                "head": 3,
                "index": 6,
                "relation": "OBJ"
              },
              {
                "head": 3,
                "index": 7,
                "relation": "ADVMOD"
              },
              {
                "head": 3,
                "index": 8,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "span": {
                "end": 765,
                "start": 762
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "gonna",
                  "type": "text"
                }
              ],
              "raw_text": "gonna",
              "span": {
                "end": 771,
                "start": 766
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "put",
                  "type": "text"
                }
              ],
              "raw_text": "put",
              "span": {
                "end": 775,
                "start": 772
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 779,
                "start": 776
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "choo's",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 787,
                      "start": 786
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "choo's",
                  "type": "text"
                }
              ],
              "raw_text": "choo's+choo's",
              "span": {
                "end": 793,
                "start": 780
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "wheel",
                  "type": "text"
                }
              ],
              "raw_text": "wheel",
              "span": {
                "end": 799,
                "start": 794
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "on",
                  "type": "text"
                }
              ],
              "raw_text": "on",
              "span": {
                "end": 802,
                "start": 800
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Timmy",
      "role": "Target_Child"
    },
    "GEM": {
      "birth_date": null,
      "code": "GEM",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM"
      },
      "name": "Gemma",
      "role": "Speaker"
    },
    "LIN": {
      "birth_date": null,
      "code": "LIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN"
      },
      "name": "Linda",
      "role": "Investigator"
    },
    "WIN": {
      "birth_date": null,
      "code": "WIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN"
      },
      "name": "Winnie",
      "role": "Investigator"
    }
  }
}
